@@ -6,6 +6,7 @@
         Add GModelSpatialRadialProfile and GModelSpatialRadialProfileGauss classes (#1520)
         Make GFilename::is_fits thread safe (#1717).
         Improve exception message in GModelSpatialDiffuseCube::mc (#1915)
+        Monte Carlo for empty maps or map cubes no longer throws an exception (#1915)
         Add GModelTemporalFunc call (#1914)
         Add GSkyMap FITS HDU constructor
         Add leap second for 1-1-2017 (#1887)
